# 2016_P3p1t0

./: .gitignore  README.md  ezine.txt  pepito.patch
exploit/: Makefile  display_info.sh  restart_session.sh
patch/: Makefile
patch/src/: daemon.c  main.c  network.c
reverse/: Makefile
reverse/src_lib/: libsecret.c
sources/: CMakeLists.txt  client.py
sources/includes/: supersecret.h
sources/src/: main.c
